--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Book Store</title>
+        <title>Primid</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
         <link href="resources/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
@@ -31,13 +31,13 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href>Primid</a>
+                            <a class="navbar-brand" href>Evento</a>
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="main-bar">
                             <ul class="nav navbar-nav">
-                                <li><a ui-sref="evento">evento</a></li>
+                                <li><a ui-sref="evento">Evento</a></li>
 
                             </ul>
                         </div> <!-- /.navbar-collapse -->
