--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -58,19 +58,19 @@
 									<span class="icon-bar"></span>
 							</button>
 							<!--=== Site Name ===-->
-							<a class="site-name navbar-brand" href="#"><span>E</span>gret</a>
+							<a class="site-name navbar-brand" href="#"><span>P</span>rimid</a>
 						</div>
 
 						<!-- Main Navigation menu Starts -->
 						<div class="collapse navbar-collapse navbar-responsive-collapse">
 							<ul class="nav navbar-nav navbar-right">
-								<li class="current"><a href="#header">Home</a></li>
-								<li><a href="#section-feature">Features</a></li>
-								<li><a href="#section-services">Services</a></li>
-								<li><a href="#step-1">Work Flow</a></li>
-								<li><a href="#section-screenshots">Screenshots</a></li>
-								<li><a href="#section-pricing">Pricing</a></li>
-								<li><a href="#section-download">Download</a></li>
+								<li class="current"><a href="#header">Inicio</a></li>
+								<li><a href="#section-feature">Usuario</a></li>
+								<li><a href="#section-services">Servicios</a></li>
+								<li><a href="#step-1">Itinerarios</a></li>
+								<li><a href="#section-screenshots">Eventos</a></li>
+								<li><a href="#section-pricing">Sitios</a></li>
+								<li><a href="#section-download">Media</a></li>
 							</ul>
 						</div>
 						<!-- Main Navigation menu ends-->
@@ -86,20 +86,20 @@
 			<div class="section-overlay"></div>
 			<div class="container home">
 				<div class="row">
-					<h1 class="well-come">Esta Cosa Funciono</h1>
+					<h1 class="well-come">Conoce, disfruta y opina.</h1>
 
 					<div class="col-md-8 col-md-offset-2">
-						<p class="intro-message">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet qui dolorem</p>
+						<p class="intro-message">Conoce lugares increibles en todo el planeta que esperan por ti.</p>
 
 						<div class="home-buttons">
 							<a href="#" class="fancy-button button-line button-white vertical">
-								Learn more
+								Conoce la app
 								<span class="icon">
 									<i class="fa fa-gear"></i>
 								</span>
 							</a>
 							<a href="#" class="fancy-button button-line button-white zoom">
-								Download now
+								Registrate
 								<span class="icon">
 									<i class="fa fa-leaf"></i>
 								</span>
@@ -124,13 +124,13 @@
 							<!-- Single Feature Starts -->
 							<li class="single-feature" title="Card style">
 								<img src="images/5.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">Card style</h4>
+								<h4 class="feature-title color-scheme">Paris</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut.
 								</p>
 
 									<a href="#" class="fancy-button button-line btn-col small vertical">
-										Details
+										Detalles
 										<span class="icon">
 											<i class="fa fa-leaf"></i>
 										</span>
@@ -141,13 +141,13 @@
 
 							<!-- Single Feature Starts -->
 							<li class="single-feature" title="50+ SVG Icon included">
-								<img src="images/2.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">50+ SVG Icon included</h4>
+								<img src="images/22.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">New York</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
 								<a href="#" class="fancy-button button-line btn-col small zoom">
-									Details
+									Detalles
 									<span class="icon">
 										<i class="fa fa-leaf"></i>
 									</span>
@@ -157,13 +157,13 @@
 
 							<!-- Single Feature Starts -->
 							<li class="single-feature" title="MailChimp Ready">
-								<img src="images/3.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">MailChimp Ready</h4>
+								<img src="images/33.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Hawai</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
 								<a href="#" class="fancy-button button-line btn-col small zoom">
-									Details
+                                                                            Detalles
 									<span class="icon">
 										<i class="fa fa-leaf"></i>
 									</span>
@@ -173,13 +173,13 @@
 
 							<!-- Single Feature Starts -->
 							<li class="single-feature" title="4 home style">
-								<img src="images/4.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">4 home style</h4>
+								<img src="images/44.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Moscu</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
 								<a href="#" class="fancy-button button-line btn-col small zoom">
-									Details
+									Detalles
 									<span class="icon">
 										<i class="fa fa-leaf"></i>
 									</span>
@@ -189,13 +189,13 @@
 
 							<!-- Single Feature Starts -->
 							<li class="single-feature" title="Parallax Backgrounds">
-								<img src="images/5.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">Parallax Backgrounds</h4>
+								<img src="images/55.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Cancun</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
 								<a href="#" class="fancy-button button-line btn-col small zoom">
-									Details
+									Detalles
 									<span class="icon">
 										<i class="fa fa-leaf"></i>
 									</span>
@@ -205,13 +205,13 @@
 
 							<!-- Single Feature Starts -->
 							<li class="single-feature" title="Ajax contact form">
-								<img src="images/6.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">Ajax contact form</h4>
+								<img src="images/66.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Sidney</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
 								<a href="#" class="fancy-button button-line btn-col small zoom">
-									Details
+									Detalles
 									<span class="icon">
 										<i class="fa fa-leaf"></i>
 									</span>
@@ -221,13 +221,13 @@
 
 							<!-- Single Feature Starts -->
 							<li class="single-feature" title="unlimited Google fonts">
-								<img src="images/7.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">unlimited Google fonts</h4>
+								<img src="images/77.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Berlin</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
 								<a href="#" class="fancy-button button-line btn-col small zoom">
-									Details
+									Detalles
 									<span class="icon">
 										<i class="fa fa-leaf"></i>
 									</span>
@@ -237,13 +237,13 @@
 
 							<!-- Single Feature Starts -->
 							<li class="single-feature" title="Feature heading">
-								<img src="images/8.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">Feature heading</h4>
+								<img src="images/88.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Dubai</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
 								</p>
 								<a href="#" class="fancy-button button-line btn-col small zoom">
-									Details
+									Detalles
 									<span class="icon">
 										<i class="fa fa-leaf"></i>
 									</span>
