--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -936,34 +936,101 @@
 
 
 	<!--=== Download section Starts ===-->
-	<section id="section-download" class="download-wrap">
-		<div class="container download center">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="col-md-10 col-md-offset-1 center section-title">
-						<h3>Download app</h3>
-					</div>
-					<div class="download-buttons clearfix"> <!-- Download Buttons -->
-						<a class="fancy-button button-line no-text btn-col large zoom" href="#" title="Download from App store">
-							<span class="icon">
-							<i class="fa fa-apple"></i>
+        <!--Fabio Lopez -->
+        <section id="section-download" class="screenshots-wrap-wrap">
+		<div class="container screenshots animated" data-animation="fadeInUp" data-animation-delay="1000">
+			<div class="row porfolio-container">
+				<div class="col-md-10 col-md-offset-1 center section-title">
+					<h3>Multimedia</h3>
+				</div>
+				<!-- Single screenshot starts -->
+				<div class="col-md-4 col-sm-4 col-xs-6">
+					<div class="screenshot">
+						<div class="photo-box">
+							<img src="images/multimedia1.jpg" alt="" />
+							<div class="photo-overlay">
+								<h4>Londres</h4>
+							</div>
+							<span class="photo-zoom">
+								<a href="single-project.html" class="view-project"><i class="fa fa-search-plus fa-2x"></i></a>
 							</span>
-						</a>
-						<a class="fancy-button button-line btn-col no-text large zoom" href="#" title="Download from App store">
-							<span class="icon">
-							<i class="fa fa-android"></i>
-							</span>
-						</a>
-						<a class="fancy-button button-line btn-col no-text large zoom" href="#" title="Download from App store">
-							<span class="icon">
-							<i class="fa fa-windows"></i>
-							</span>
-						</a>
+						</div>
 					</div>
 				</div>
+				<!-- Single screenshot ends -->
+
+				<!-- Single screenshot starts -->
+				<div class="col-md-4 col-sm-4 col-xs-6">
+					<div class="screenshot">
+						<div class="photo-box">
+							<img src="images/multimedia2.png" alt="" />
+							<div class="photo-overlay">
+								<h4>Rio de Janeiro</h4>
+							</div>
+							<span class="photo-zoom">
+								<a href="single-project.html" class="view-project"><i class="fa fa-search-plus fa-2x"></i></a>
+							</span>
+						</div>
+
+					</div>
+				</div>
+				<!-- Single screenshot ends -->
+
+				<!-- Single screenshot starts -->
+				<div class="col-md-4 col-sm-4 col-xs-6">
+					<div class="screenshot">
+						<div class="photo-box">
+							<img src="images/33.jpg" alt="" />
+							<div class="photo-overlay">
+								<h4>Playa</h4>
+							</div>
+							<span class="photo-zoom">
+								<a href="timeline.tpl.html" class="view-project"><i class="fa fa-search-plus fa-2x"></i></a>
+							</span>
+						</div>
+
+					</div>
+				</div>
+				<!-- Single screenshot ends -->
+                                <!--boton agregar-->
+                        <div class="sign-up" style="float:right;widht:225px;">
+                                <a href="#" class="fancy-button button-line btn-col zoom">
+                                        <p title="Agregar" style="font-size:25px"><b>Agregar media &#43</b></p>
+                                        <!--&#10084 corazon-->
+                                        <!--&#9992 avion -->
+                                </a>
+                        </div>
+                    <!--fin boton agregar-->
+                    <!--boton visualizar-->
+                        <div class="sign-up" style="float:right;widht:225px">
+                                <a href="#" class="fancy-button button-line btn-col zoom">
+                                        <p title="Visualizar" style="font-size:25px"><b>Visualizar media &#x1f440</b></p>
+
+                                </a>
+                        </div>
+                    <!--fin boton visualizar-->
+
 			</div>
+
+
+
+			<div id="portfolio-loader" class="center">
+				<div class="loading-circle fa-spin"></div>
+			</div> <!--=== Portfolio loader ===-->
+
+			<div id="portfolio-load"></div><!--=== ajax content will be loaded here ===-->
+
+			<div class="col-md-12 center back-button">
+				<a class="backToProject fancy-button button-line bell btn-col" href="#">
+					Back
+					<span class="icon">
+						<i class="fa fa-arrow-left"></i>
+					</span>
+				</a>
+			</div><!--=== Single portfolio back button ===-->
 		</div>
 	</section>
+
 	<!--=== Download section Ends ===-->
 
 
