base seccion 'media' completo

--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -994,7 +994,7 @@
 				<!-- Single screenshot ends -->
                                 <!--boton agregar-->
                         <div class="sign-up" style="float:right;widht:225px;">
-                                <a href="#" class="fancy-button button-line btn-col zoom">
+                                <a href="#" class="view-project">
                                         <p title="Agregar" style="font-size:25px"><b>Agregar media &#43</b></p>
                                         <!--&#10084 corazon-->
                                         <!--&#9992 avion -->
@@ -1002,8 +1002,8 @@
                         </div>
                     <!--fin boton agregar-->
                     <!--boton visualizar-->
-                        <div class="sign-up" style="float:right;widht:225px">
-                                <a href="#" class="fancy-button button-line btn-col zoom">
+                        <div class="sign-up" style="float:left;widht:225px">
+                                <a href="#" class="view-project">
                                         <p title="Visualizar" style="font-size:25px"><b>Visualizar media &#x1f440</b></p>
 
                                 </a>
@@ -1019,15 +1019,95 @@
 			</div> <!--=== Portfolio loader ===-->
 
 			<div id="portfolio-load"></div><!--=== ajax content will be loaded here ===-->
+                            <div class="col-md-12 center back-button"><!--Lo que salga dentro de este div solo aparece despues del clik en un boton-->
+                                <!-- <div class="container pricing"> -->
+                                <div class="row">
+                                        <!-- Intinerario1 -->
+                                        <div class="col-md-3 col-sm-6 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="500">
+                                                <div class="single-pricing">
 
-			<div class="col-md-12 center back-button">
-				<a class="backToProject fancy-button button-line bell btn-col" href="#">
-					Back
-					<span class="icon">
-						<i class="fa fa-arrow-left"></i>
-					</span>
-				</a>
-			</div><!--=== Single portfolio back button ===-->
+                                                        <div class="pricing-head">
+                                                                <h4 class="pricing-heading color-scheme">Itinerario 1</h4>
+                                                        </div>
+
+
+                                                        <div class="sign-up">
+                                                                <a href="#" class="fancy-button button-line btn-col zoom">
+                                                                        <p title="Escoger" style="font-size:22px">Escoger &#x261D</p>
+                                                                        <!--&#10084 corazon-->
+                                                                        <!--&#9992 avion -->
+                                                                </a>
+                                                        </div>
+                                                </div>
+                                        </div>
+
+                                        <!-- Intinerario2 -->
+                                        <div class="col-md-3 col-sm-6 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="700">
+                                                <div class="single-pricing">
+
+                                                        <div class="pricing-head">
+                                                                <h4 class="pricing-heading color-scheme">Itinerario 2</h4>
+                                                        </div>
+
+
+                                                        <div class="sign-up">
+                                                                <a href="#" class="fancy-button button-line btn-col zoom">
+                                                                        <p title="Escoger" style="font-size:22px">Escoger &#x261D</p>
+                                                                        <!--&#10084 corazon-->
+                                                                </a>
+                                                        </div>
+                                                </div>
+                                        </div>
+
+                                        <!-- Intinerario3 -->
+                                        <div class="col-md-3 col-sm-6 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="900">
+                                                <div class="single-pricing">
+
+                                                        <div class="pricing-head">
+                                                                <h4 class="pricing-heading color-scheme">Itinerario 3</h4>
+                                                        </div>
+
+
+                                                        <div class="sign-up">
+                                                                <a href="#" class="fancy-button button-line btn-col zoom">
+                                                                        <p title="Escoger" style="font-size:22px">Escoger &#x261D</p>
+                                                                        <!--&#10084 corazon-->
+                                                                </a>
+                                                        </div>
+                                                </div>
+                                        </div>
+
+                                        <!-- Intinerario4 -->
+                                        <div class="col-md-3 col-sm-6 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="1100">
+                                                <div class="single-pricing">
+
+                                                        <div class="pricing-head">
+                                                                <h4 class="pricing-heading color-scheme">Itinerario 4</h4>
+
+                                                        </div>
+
+
+                                                        <div class="sign-up">
+                                                                <a href="#" class="fancy-button button-line btn-col zoom">
+                                                                        <p title="Escoger" style="font-size:22px">Escoger &#x261D</p>
+                                                                        <!--&#10084 corazon-->
+                                                                </a>
+                                                        </div>
+                                                </div>
+                                        </div>
+
+
+                                </div>
+                        <!-- </div> -->
+
+
+                                    <a class="backToProject fancy-button button-line bell btn-col" href="#">
+                                            Back
+                                            <span class="icon">
+                                                    <i class="fa fa-arrow-left"></i>
+                                            </span>
+                                    </a>
+                            </div><!--=== Single portfolio back button ===-->
 		</div>
 	</section>
 
