base seccion 'media' completo

--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -942,12 +942,13 @@
 			<div class="row porfolio-container">
 				<div class="col-md-10 col-md-offset-1 center section-title">
 					<h3>Multimedia</h3>
+                                        <h5 style="color:whitesmoke">¡Accede, agrega y edita a los recuerdos vividos en tu viaje a través de tus fotos, música y videos!</h5>
 				</div>
 				<!-- Single screenshot starts -->
 				<div class="col-md-4 col-sm-4 col-xs-6">
 					<div class="screenshot">
 						<div class="photo-box">
-							<img src="images/multimedia1.jpg" alt="" />
+							<img src="images/multimedia1.jpg" alt="multimedia 1"  />
 							<div class="photo-overlay">
 								<h4>Londres</h4>
 							</div>
@@ -1004,7 +1005,7 @@
                     <!--boton visualizar-->
                         <div class="sign-up" style="float:left;widht:225px">
                                 <a href="#" class="view-project">
-                                        <p title="Visualizar" style="font-size:25px"><b>Visualizar media &#x1f440</b></p>
+                                        <p title="Visualizar" style="font-size:25px"><b>Visualizar media </b></p>
 
                                 </a>
                         </div>
