--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -382,8 +382,8 @@
 
 
 						<div class="sign-up">
-							<a href="#" class="fancy-button button-line btn-col zoom">
-								<p title="Ver" style="font-size:12px">Ver &#10084</p>
+							<a href="itinerario1.html" target="iframe1" class="fancy-button button-line btn-col zoom">
+								<p title="Ver" style="font-size:12px">Ver &#9992</p>
 								<!--&#10084 corazon-->
 								<!--&#9992 avion -->
 							</a>
@@ -405,7 +405,7 @@
 
 
 						<div class="sign-up">
-							<a href="#" class="fancy-button button-line btn-col zoom">
+							<a href="itinerario2.html" target="iframe1" class="fancy-button button-line btn-col zoom">
 								<p title="Ver" style="font-size:12px">Ver &#9992</p>
 								<!--&#10084 corazon-->
 							</a>
@@ -467,33 +467,17 @@
 				<!-- Step Description Ends -->
 				<div class="col-md-4 step-img">
 
-					<p> Itinerario Actual</p>
-					<img title="Agregar Itinerario" src="images/IntinerarioAgregar.jpg" alt="Crea tu itinerario" /> <!-- Step Photo Here -->
-					<img src="images/Agregar.png" alt="Agregar" width="30" height="30"/ >
-
-					<p> Agregar Intinerario</p>
-
-					<div class="col-md-10 step-details">
-							<h5 class="step-title color-scheme">Detalles</h5>
-
-							<ul class="sub-steps"> <!-- Sub steps here -->
-								<li>
-									<span class="icon fa fa-comments color-scheme"></span>
-									<span class="sub-text">Comentarios</span>
-								</li>
-								<li>
-									<span class="icon fa fa-pencil-square-o color-scheme"></span>
-									<span class="sub-text">Integrantes</span>
-								</li>
-
-							</ul>
-					</div>
+					
+					<!--corte1-->
+					<iframe src="itinerario1.html" name="iframe1"width="350" height="400" style="border:none" data-animation="bounceInRight"></iframe>
+					<a  href="#step-2"><p class="step-description"><strong>Ver mapa y linea de tiempo</strong></p></a>
 
 				</div>
 			</div>
 		</div>
 	</section>
 	<!--=== Step-1 section Ends ===-->
+	<!-- LuisMesa Fin -->
 
 
 
@@ -510,7 +494,7 @@
 					</div>
 
 					<div class="col-md-10 step-details">
-							<h3 class="step-title color-scheme">Work flow title here</h3>
+							<h3 class="step-title color-scheme">Acá puede ir el mapa y la linea de tiempo del itinerario seleccionado arriba</h3>
 							<p class="step-description">Cillum laboris <strong>consequat</strong>, qui elit retro next level
 							skateboard freegan hella. Cillum laboris consequat qui elit retro next level
 							skateboard freegan hella. Cillum laboris consequat skateboard freegan hella</p>
@@ -1122,7 +1106,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-10 col-md-offset-1 center section-title">
-						<h3>Leave a message</h3>
+						<h3>Dejanos un mensaje</h3>
 					</div>
 
 					<div class="confirmation">
@@ -1140,7 +1124,7 @@
 							<textarea id="message" class="textarea-field form-item field-message" rows="10" name="contact-message" placeholder="Message"></textarea>
 						</div>
 						<button type="submit" class="fancy-button button-line button-white large zoom subform">
-							Send message
+							Enviar mensaje
 							<span class="icon">
 								<i class="fa fa-paper-plane-o"></i>
 							</span>
@@ -1158,7 +1142,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<h4 class="footer-title"><!-- Footer Title -->
-						<a class="site-name" href="#"><span>E</span>gret</a>
+						<a class="site-name" href="#"><span>P</span>RIMID</a>
 					</h4>
 
 					<!-- Social Links -->
