--- a/primid/src/main/webapp/src/modules/single/single-project.html
+++ b/primid/src/main/webapp/src/modules/single/single-project.html
@@ -3,21 +3,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Project</title>
-	<link rel="stylesheet" href="css/bootstrap.css" />
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="resources/css/bootstrap.css" />
+	<link rel="stylesheet" href="resources/css/style.css" />
 </head>
 <body>
 	<div class="container">
 		<div class="portfolio-project">
 			<div class="row">
 				<div class="col-md-10 col-md-offset-1 center section-title">
-					<h4>Project Title 2</h4>
+					<h4>Project Title</h4>
 				</div>
 				<div class="col-md-5 project-photo">
-					<img src="images/8.jpg" alt="" />
+					<img src="images/1.jpg" alt="" />
 				</div>
 				<div class="col-md-3 project-details">
-					<h5>Project Details 2</h5>
+					<h5>Project Details</h5>
 					<ul class="details-list">
 						<li><i class="fa fa-th-list"></i> <strong class="strong">Category: </strong> Project category</li>
 						<li><i class="fa fa-user"></i> <strong class="strong">Designer: </strong> MH Rafi</li>
@@ -27,16 +27,16 @@
 					</ul>
 				</div>
 				<div class="col-md-4 project-info">
-					<h5>Project Info 2</h5>
-					<p>Without. Open third beginning have, green forth grass can't, it lesser us herb created i one 
+					<h5>Project Info</h5>
+					<p>Without. Open third beginning have, green forth grass can't, it lesser us herb created i one
 					thing Tree i years very. Man itself in multiply after fly had give sixth waters. First you'll won't sixth moving.
 					Man itself in multiply after fly had give sixth waters. First you'll won't sixth moving.</p>
 				</div>
 			</div>
 		</div>
 	</div>
-	
-	
-	
+
+
+
 </body>
 </html>
