--- a/primid/src/main/webapp/src/modules/Itinerario/itinerario2.tpl.html
+++ b/primid/src/main/webapp/src/modules/Itinerario/itinerario2.tpl.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Intinerario2</title>
-	<link rel="stylesheet" href="css/bootstrap.css" />
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="resources/css/bootstrap.css" />
+	<link rel="stylesheet" href="resources/css/style.css" />
 </head>
 <body>
 	<div class="container">
@@ -12,7 +12,7 @@
 			<div class="row">
 				
 				<div class="col-md-5 project-photo">
-					<img src="images/intinerario2.jpg" alt="Itinerario2" />
+					<img src="resources/images/intinerario2.jpg" alt="Itinerario2" />
 				</div>
 				<div class="col-md-3 project-details">
 					<h5>Itinerario 2</h5><h5 style="float:right">Editar &#9998</h5>
