Estructuración final con ui router, ya funcionan las vistas :D

--- a/primid/src/main/webapp/src/modules/Viajero/Viajero.tpl.html
+++ b/primid/src/main/webapp/src/modules/Viajero/Viajero.tpl.html
@@ -1,16 +1,29 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+<div class="container step animated" data-animation="bounceInLeft" data-animation-delay="700">
+				<div class="row">
+				<img src="resources/images/p5.jpg" alt="banner" class="img-responsive">
+				<img src="resources/images/profile.jpg" class="img-circle profile">
+					<ul class="sub-steps"> <!-- Sub steps here -->
+						<li>
+							<span class="icon fa fa-comments color-scheme"></span>
+							<span class="sub-text">Comentarios</span>
+						</li>
+						<li>
+							<span class="icon fa fa-pencil-square-o color-scheme"></span>
+							<span class="sub-text">Editar</span>
+						</li>
+
+					</ul>
+				</div>
+</div>
+
+<!--==== MailChimp Widget plugin ====-->
+<script type="text/javascript" src="resources/js/jquery.ajaxchimp.min.js"></script>
+
+<!--==== Scroll and navigation plugins ====-->
+<script type="text/javascript" src="resources/js/jquery.nicescroll.min.js"></script>
+<script type="text/javascript" src="resources/js/jquery.nav.js"></script>
+<script type="text/javascript" src="resources/js/jquery.appear.js"></script>
+<script type="text/javascript" src="resources/js/jquery.fitvids.js"></script>
+
+<!--==== Custom Script files ====-->
+<script type="text/javascript" src="resources/js/custom.js"></script>
