--- a/primid/src/main/webapp/src/modules/evento/evento.tpl.html
+++ b/primid/src/main/webapp/src/modules/evento/evento.tpl.html
@@ -1,18 +1,185 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<div class="container features center">
+			<div class="row">
+				<div class="col-lg-12">
+						<!--Features container Starts -->
+						<ul id="card-ul" class="features-hold baraja-container">
+
+							<!-- Single Feature Starts -->
+							<li class="single-feature" title="Card style">
+								<img src="resources/images/5.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Paris</h4>
+								<p class="feature-text">
+									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut.
+								</p>
+
+									<a href="#" class="fancy-button button-line btn-col small vertical">
+										Detalles
+										<span class="icon">
+											<i class="fa fa-leaf"></i>
+										</span>
+									</a>
+
+							</li>
+							<!-- Single Feature Ends -->
+
+							<!-- Single Feature Starts -->
+							<li class="single-feature" title="50+ SVG Icon included">
+								<img src="resources/images/22.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">New York</h4>
+								<p class="feature-text">
+									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+								</p>
+								<a href="#" class="fancy-button button-line btn-col small zoom">
+									Detalles
+									<span class="icon">
+										<i class="fa fa-leaf"></i>
+									</span>
+								</a>
+							</li>
+							<!-- Single Feature Ends -->
+
+							<!-- Single Feature Starts -->
+							<li class="single-feature" title="MailChimp Ready">
+								<img src="resources/images/33.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Hawai</h4>
+								<p class="feature-text">
+									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+								</p>
+								<a href="#" class="fancy-button button-line btn-col small zoom">
+                                                                            Detalles
+									<span class="icon">
+										<i class="fa fa-leaf"></i>
+									</span>
+								</a>
+							</li>
+							<!-- Single Feature Ends -->
+
+							<!-- Single Feature Starts -->
+							<li class="single-feature" title="4 home style">
+								<img src="resources/images/44.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Moscu</h4>
+								<p class="feature-text">
+									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+								</p>
+								<a href="#" class="fancy-button button-line btn-col small zoom">
+									Detalles
+									<span class="icon">
+										<i class="fa fa-leaf"></i>
+									</span>
+								</a>
+							</li>
+							<!-- Single Feature Ends -->
+
+							<!-- Single Feature Starts -->
+							<li class="single-feature" title="Parallax Backgrounds">
+								<img src="resources/images/55.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Cancun</h4>
+								<p class="feature-text">
+									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+								</p>
+								<a href="#" class="fancy-button button-line btn-col small zoom">
+									Detalles
+									<span class="icon">
+										<i class="fa fa-leaf"></i>
+									</span>
+								</a>
+							</li>
+							<!-- Single Feature Ends -->
+
+							<!-- Single Feature Starts -->
+							<li class="single-feature" title="Ajax contact form">
+								<img src="resources/images/66.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Sidney</h4>
+								<p class="feature-text">
+									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+								</p>
+								<a href="#" class="fancy-button button-line btn-col small zoom">
+									Detalles
+									<span class="icon">
+										<i class="fa fa-leaf"></i>
+									</span>
+								</a>
+							</li>
+							<!-- Single Feature Ends -->
+
+							<!-- Single Feature Starts -->
+							<li class="single-feature" title="unlimited Google fonts">
+								<img src="resources/images/77.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Berlin</h4>
+								<p class="feature-text">
+									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+								</p>
+								<a href="#" class="fancy-button button-line btn-col small zoom">
+									Detalles
+									<span class="icon">
+										<i class="fa fa-leaf"></i>
+									</span>
+								</a>
+							</li>
+							<!-- Single Feature Ends -->
+
+							<!-- Single Feature Starts -->
+							<li class="single-feature" title="Feature heading">
+								<img src="resources/images/88.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Dubai</h4>
+								<p class="feature-text">
+									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+								</p>
+								<a href="#" class="fancy-button button-line btn-col small zoom">
+									Detalles
+									<span class="icon">
+										<i class="fa fa-leaf"></i>
+									</span>
+								</a>
+							</li>
+							<!-- Single Feature Ends -->
+						</ul>
+						<!--Features container Ends -->
+
+						<!-- Features Controls Starts -->
+						<div class="features-control relative">
+							<button class="control-icon fancy-button button-line no-text btn-col bell" id="feature-prev" title="Previous" >
+								<span class="icon">
+									<i class="fa fa-arrow-left"></i>
+								</span>
+							</button>
+							<button class="control-icon fancy-button button-line no-text btn-col zoom" id="feature-expand" title="Expand" >
+								<span class="icon">
+									<i class="fa fa-expand"></i>
+								</span>
+							</button>
+							<button class="control-icon fancy-button button-line no-text btn-col zoom" id="feature-close" title="Collapse" >
+								<span class="icon">
+									<i class="fa fa-compress"></i>
+								</span>
+							</button>
+							<button class="control-icon fancy-button button-line no-text btn-col bell" id="feature-next" title="Next" >
+								<span class="icon">
+									<i class="fa fa-arrow-right"></i>
+								</span>
+							</button>
+						</div>
+						<!-- Features Controls Ends -->
+				</div>
+			</div>
+		</div>
 
 
-</html>
+
+
+<!--==== Slider and Card style plugin ====-->
+<script type="text/javascript" src="resources/js/jquery.baraja.js"></script>
+<script type="text/javascript" src="resources/js/jquery.vegas.min.js"></script>
+<script type="text/javascript" src="resources/js/jquery.bxslider.min.js"></script>
+
+<!--==== MailChimp Widget plugin ====-->
+<script type="text/javascript" src="resources/js/jquery.ajaxchimp.min.js"></script>
+
+<!--==== Scroll and navigation plugins ====-->
+<script type="text/javascript" src="resources/js/jquery.nicescroll.min.js"></script>
+<script type="text/javascript" src="resources/js/jquery.nav.js"></script>
+<script type="text/javascript" src="resources/js/jquery.appear.js"></script>
+<script type="text/javascript" src="resources/js/jquery.fitvids.js"></script>
+
+<!--==== Custom Script files ====-->
+<script type="text/javascript" src="resources/js/custom.js"></script>
