--- a/primid/src/main/webapp/src/modules/Timeline/timeline.tpl.html
+++ b/primid/src/main/webapp/src/modules/Timeline/timeline.tpl.html
@@ -1,48 +1,51 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
-<head>
-	<meta charset="UTF-8">
-	<title>Timeline</title>
-	<link rel="stylesheet" href="css/bootstrap.css" />
-	<link rel="stylesheet" href="css/style.css" />
-</head>
-<body>
-	<div class="container">
-		<div class="portfolio-project">
+<div class="container step animated" data-animation="bounceInRight" data-animation-delay="700">
 			<div class="row">
-				<div class="col-md-10 col-md-offset-1 center section-title">
-					<h4>Timeline </h4>
-				</div>
-				<div class="col-md-5 project-photo">
-					<img src="images/timeline.jpg" alt="" />
-				</div>
-				<div class="col-md-3 project-details">
-					<h5>Itinerario </h5>
-					<ul class="details-list">
-					<form action="script.php" method="post">
-                                            Seleccione Itinerario:<br />
-                                            <select name="programa">
-                                                <option value="it1" selected="selected">Itinerario 1</option>
-                                                <option value="it2">Itinerario 2</option>
-                                                <option value="it3">Itinerario 3</option>
-                                            </select>
+				<!-- Step Description Starts -->
+				<div class="col-md-8 step-desc">
+					<div class="col-md-2 center">
+						<div class="step-no">
+							<span class="no-inner">2</span>
+						</div>
+					</div>
 
-                                         </form>
-                                        </ul>
+					<div class="col-md-10 step-details">
+							<h3 class="step-title color-scheme">Aca va la linea del tiempo</h3>
+							<p class="step-description">Cillum laboris <strong>consequat</strong>, qui elit retro next level
+							skateboard freegan hella. Cillum laboris consequat qui elit retro next level
+							skateboard freegan hella. Cillum laboris consequat skateboard freegan hella</p>
+
+							<ul class="sub-steps"> <!-- Sub steps here -->
+								<li>
+									<span class="icon fa fa-comments color-scheme"></span>
+									<span class="sub-text">skateboard freegan hella. Cillum laboris consequat qui elit</span>
+								</li>
+								<li>
+									<span class="icon fa fa-pencil-square-o color-scheme"></span>
+									<span class="sub-text">Documenting collected data</span>
+								</li>
+
+							</ul>
+					</div><!-- End step-details -->
 				</div>
-				<div class="col-md-4 project-info">
-					<h5>Timeline Details</h5>
-					<p>Aqui va toda la info del Timeline especifico</p>
-                                        <p>7:00 am : </p>
-                                        <p>10:00 am : </p>
-                                        <p>1:00 pm : </p>
-                                        <p>5:00 pm : </p>
+				<!-- Step Description Ends -->
+				<div class="col-md-4 step-img">
+					<img src="resources/images/timeline.jpg" alt="" /> <!-- Step Photo Here -->
 				</div>
 			</div>
-		</div>
-	</div>
+</div>
+
+
+<!--==== MailChimp Widget plugin ====-->
+<script type="text/javascript" src="resources/js/jquery.ajaxchimp.min.js"></script>
+
+<!--==== Scroll and navigation plugins ====-->
+<script type="text/javascript" src="resources/js/jquery.nicescroll.min.js"></script>
+<script type="text/javascript" src="resources/js/jquery.nav.js"></script>
+<script type="text/javascript" src="resources/js/jquery.appear.js"></script>
+<script type="text/javascript" src="resources/js/jquery.fitvids.js"></script>
+
+<!--==== Custom Script files ====-->
+<script type="text/javascript" src="resources/js/custom.js"></script>
 
 
 
-</body>
-</html>
