--- a/primid/src/main/webapp/src/modules/Viajero/Viajero.tpl.html
+++ b/primid/src/main/webapp/src/modules/Viajero/Viajero.tpl.html
@@ -1,20 +1,39 @@
-<div class="container step animated" data-animation="bounceInLeft" data-animation-delay="700">
-				<div class="row">
-				<img src="resources/images/p5.jpg" alt="banner" class="img-responsive">
-				<img src="resources/images/profile.jpg" class="img-circle profile">
-					<ul class="sub-steps"> <!-- Sub steps here -->
-						<li>
-							<span class="icon fa fa-comments color-scheme"></span>
-							<span class="sub-text">Comentarios</span>
-						</li>
-						<li>
-							<span class="icon fa fa-pencil-square-o color-scheme"></span>
-							<span class="sub-text">Editar</span>
-						</li>
+<div class="section-overlay"></div>
+		<div class="container contact animated" data-animation="flipInY" data-animation-delay="1000">
+			<div class="row">
+				<div class="col-md-6  col-md-offset-6">
+					<div class="col-md-10 col-md-offset-1 center section-title">
+					<div class="col-md-0 step-img">
+						<img src="resources/images/profile.jpg" class="img-circle profile">
+						</div>
+						<h4>Pepito Perez</h4>
+					</div>
 
-					</ul>
-				</div>
-</div>
+					<form class="contact-form support-form center">
+
+						<div class="col-lg-12">
+							<label><input id="name" class="input-field form-item field-name" type="text" required="required" name="contact-name" placeholder="Pepito Perez" /></label>
+							<label><input id="email" class="input-field form-item field-email" type="email" required="required" name="contact-email" placeholder="TuCorreo@uniandes.edu.co" /></label>
+							
+						</div>
+						<button type="submit" class="fancy-button button-line button-orange subform center">
+							Editar cuenta
+							<span class="icon">
+								<i class="fa fa-file-o"></i>
+							</span>
+						</button>
+						<button type="submit" class="fancy-button button-line button-orange subform center">
+							Editar Foto
+							<span class="icon">
+								<i class="fa fa-file-o"	></i>
+							</span>
+						</button>
+					</form>
+					
+			</div>
+
+		</div>
+	</div>
 
 <!--==== MailChimp Widget plugin ====-->
 <script type="text/javascript" src="resources/js/jquery.ajaxchimp.min.js"></script>
