--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html ng-app="mainApp">
 <html lang="en-US" >
-    
+
 <head>
 
 <meta charset="utf-8">
@@ -154,14 +154,14 @@
 
 	<!--=== Media empieza ===-->
 	<!--Fabio Lopez -->
-    <section id="multimedia" class="screenshots-wrap-wrap">
+        <section id="multimedia" class="screenshots-wrap-wrap">
 		<div ui-view="idMultimedia"></div>
 	</section>
 	<!--=== Termina media ===-->
 
 	<!-- Empieza Viajero Starts -->
 		<section id="viajero" class="feature-wrap">
-			<div ui-view="idViajero"></div>
+			<!--<div ui-view="idViajero"></div>-->
 
 		</section>
 		<!--=== Termina viajero ===-->
@@ -266,6 +266,12 @@
 
 <!--==== Custom Script files ====-->
 <script type="text/javascript" src="resources/js/custom.js"></script>
+
+<!--==== Scroll and navigation plugins ====-->
+<script type="text/javascript" src="resources/js/jquery.nicescroll.min.js"></script>
+<script type="text/javascript" src="resources/js/jquery.nav.js"></script>
+<script type="text/javascript" src="resources/js/jquery.appear.js"></script>
+<script type="text/javascript" src="resources/js/jquery.fitvids.js"></script>
 
 </body>
 </html>
