--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html ng-app="mainApp">
 <html lang="en-US" >
-
+    
 <head>
 
 <meta charset="utf-8">
@@ -45,14 +45,6 @@
 		<script src="http://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 		<script src="http://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif] -->
-
-        <!-- script para mapa -->
-        <script src="http://maps.googleapis.com/maps/api/js"></script>
-        <!-- archivos para el tmp de mapa -->
-        <script src="src/modules/mapa/mapa.mod.js" type="text/javascript"></script>
-        <script src="src/modules/mapa/mapa.ctrl.js" type="text/javascript"></script>
-        <script src="src/modules/mapa/mapa.svc.js" type="text/javascript"></script>
-        <script src="src/modules/mapa/mapa.mock.js" type="text/javascript"></script>
 
 
 </head>
@@ -133,7 +125,7 @@
 	</div>
         <!--=== Seccion de las cartas de los eventos ===-->
 	<section id="section-feature" class="feature-wrap">
-	        <div ui-view="idEvento"></div>
+		<div ui-view="idEvento"></div>
 	</section>
 	<!--=== Seccion de las cartas de eventos termina ===-->
 
@@ -162,14 +154,14 @@
 
 	<!--=== Media empieza ===-->
 	<!--Fabio Lopez -->
-        <section id="multimedia" class="screenshots-wrap-wrap">
+    <section id="multimedia" class="screenshots-wrap-wrap">
 		<div ui-view="idMultimedia"></div>
 	</section>
 	<!--=== Termina media ===-->
 
 	<!-- Empieza Viajero Starts -->
 		<section id="viajero" class="feature-wrap">
-			<!--<div ui-view="idViajero"></div>-->
+			<div ui-view="idViajero"></div>
 
 		</section>
 		<!--=== Termina viajero ===-->
@@ -274,12 +266,6 @@
 
 <!--==== Custom Script files ====-->
 <script type="text/javascript" src="resources/js/custom.js"></script>
-
-<!--==== Scroll and navigation plugins ====-->
-<script type="text/javascript" src="resources/js/jquery.nicescroll.min.js"></script>
-<script type="text/javascript" src="resources/js/jquery.nav.js"></script>
-<script type="text/javascript" src="resources/js/jquery.appear.js"></script>
-<script type="text/javascript" src="resources/js/jquery.fitvids.js"></script>
 
 </body>
 </html>
