--- a/primid/src/main/webapp/src/modules/evento/evento.tpl.html
+++ b/primid/src/main/webapp/src/modules/evento/evento.tpl.html
@@ -1,137 +1,92 @@
-<div class="container features center">
-			<div class="row">
-				<div class="col-lg-12">
+
+
+<!--==== Slider and Card style plugin ====-->
+<script type="text/javascript" src="resources/js/jquery.baraja.js"></script>
+<script type="text/javascript" src="resources/js/jquery.vegas.min.js"></script>
+<script type="text/javascript" src="resources/js/jquery.bxslider.min.js"></script>
+
+<!--=== Features section Starts ===-->
+	<section id="section-feature" class="feature-wrap">
+		<div class="container features center">
+                            <ul>
+                                <li class="left">
+                                    <ul class="list-inline">
+                                        <li><div id="bx-pager" class="left client-photos">
+
+						<a data-slide-index="0" href="#viajero" class="photo-hold">
+							<span class="photo-bg">
+								<img src="resources/images/profile.jpg" alt="" /> <!-- Client photo 1 -->
+							</span>
+						</a>  
+                                        </div>
+                                        </li>
+                                        <li><h3 class="step-title color-scheme">El nombre del viajero</h3></li>
+                                    </ul>
+                                </li>
+                                <li><br></li>
+                                <li>
+                                    <ul class="list-inline">
+                                        <li><input id="name" class="input-field form-item field-name" type="text" required="required" name="ciudad-evento" placeholder="Ciudad" />
+                                        </li>
+                                        <li>
+                                            <!-- Collect the nav links, forms, and other content for toggling -->
+                                             <div class="collapse navbar-collapse" id="editorial-navbar">
+                                             <button id="refresh-evento" class="fancy-button button-line btn-col small horizontal" ng-click="ctrl.fetchRecords()"><span class="glyphicon glyphicon-refresh"></span> Refresh</button>
+                                             <button class="fancy-button button-line btn-col small horizontal">
+                                                Buscar	
+                                                    <span class="icon">
+                                                        <i class="fa fa-search"></i>
+                                                    </span>
+                                            </button>
+                                             </div>
+                                        </li>
+                                    </ul>
+
+                                </li>
+                            </ul>
+
+                    <br>
+
+                    <div ng-hide="ctrl.editMode">
+                    		<ul>
+                    			<label class="feature-title color-scheme"> Información ng </label>
+                    			<li ng-repeat="record in records">
+                    				{{record.name}}
+                    			</li>
+                    		</ul>
+                    </div>
+                    <div  class="col-lg-12">
 						<!--Features container Starts -->
 						<ul id="card-ul" class="features-hold baraja-container">
 
-							<!-- Single Feature Starts -->
-							<li class="single-feature" title="Card style">
-								<img src="resources/images/5.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">Paris</h4>
+							<!-- Single Feature Starts ng-repeat -->
+							<li ng-repeat="record in records" class="single-feature" title="Card style" id="{{$index}}-card">
+								<img src="resources/images/monserrate-church.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">{{record.name}}</h4>
 								<p class="feature-text">
 									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut.
 								</p>
 
-									<a href="#" class="fancy-button button-line btn-col small vertical">
-										Detalles
-										<span class="icon">
-											<i class="fa fa-leaf"></i>
-										</span>
+									<a ui-serf="evento1" class="fancy-button button-line btn-col small vertical">
+										<p title="Información">Información</p>
 									</a>
 
 							</li>
 							<!-- Single Feature Ends -->
 
-							<!-- Single Feature Starts -->
-							<li class="single-feature" title="50+ SVG Icon included">
-								<img src="resources/images/22.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">New York</h4>
-								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
-								</p>
-								<a href="#" class="fancy-button button-line btn-col small zoom">
-									Detalles
-									<span class="icon">
-										<i class="fa fa-leaf"></i>
-									</span>
-								</a>
-							</li>
-							<!-- Single Feature Ends -->
+						
 
 							<!-- Single Feature Starts -->
-							<li class="single-feature" title="MailChimp Ready">
-								<img src="resources/images/33.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">Hawai</h4>
+							<li class="single-feature" title="Card style" >
+								<img src="resources/images/Universal-studios.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
+								<h4 class="feature-title color-scheme">Universal</h4>
 								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
+									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut.
 								</p>
-								<a href="#" class="fancy-button button-line btn-col small zoom">
-                                                                            Detalles
-									<span class="icon">
-										<i class="fa fa-leaf"></i>
-									</span>
-								</a>
-							</li>
-							<!-- Single Feature Ends -->
 
-							<!-- Single Feature Starts -->
-							<li class="single-feature" title="4 home style">
-								<img src="resources/images/44.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">Moscu</h4>
-								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
-								</p>
-								<a href="#" class="fancy-button button-line btn-col small zoom">
-									Detalles
-									<span class="icon">
-										<i class="fa fa-leaf"></i>
-									</span>
-								</a>
-							</li>
-							<!-- Single Feature Ends -->
-
-							<!-- Single Feature Starts -->
-							<li class="single-feature" title="Parallax Backgrounds">
-								<img src="resources/images/55.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">Cancun</h4>
-								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
-								</p>
-								<a href="#" class="fancy-button button-line btn-col small zoom">
-									Detalles
-									<span class="icon">
-										<i class="fa fa-leaf"></i>
-									</span>
-								</a>
-							</li>
-							<!-- Single Feature Ends -->
-
-							<!-- Single Feature Starts -->
-							<li class="single-feature" title="Ajax contact form">
-								<img src="resources/images/66.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">Sidney</h4>
-								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
-								</p>
-								<a href="#" class="fancy-button button-line btn-col small zoom">
-									Detalles
-									<span class="icon">
-										<i class="fa fa-leaf"></i>
-									</span>
-								</a>
-							</li>
-							<!-- Single Feature Ends -->
-
-							<!-- Single Feature Starts -->
-							<li class="single-feature" title="unlimited Google fonts">
-								<img src="resources/images/77.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">Berlin</h4>
-								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
-								</p>
-								<a href="#" class="fancy-button button-line btn-col small zoom">
-									Detalles
-									<span class="icon">
-										<i class="fa fa-leaf"></i>
-									</span>
-								</a>
-							</li>
-							<!-- Single Feature Ends -->
-
-							<!-- Single Feature Starts -->
-							<li class="single-feature" title="Feature heading">
-								<img src="resources/images/88.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">Dubai</h4>
-								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut
-								</p>
-								<a href="#" class="fancy-button button-line btn-col small zoom">
-									Detalles
-									<span class="icon">
-										<i class="fa fa-leaf"></i>
-									</span>
-								</a>
-							</li>
+									<a ui-serf="evento1" class="fancy-button button-line btn-col small vertical">
+										<p title="Información">Información</p>
+									</a>
 							<!-- Single Feature Ends -->
 						</ul>
 						<!--Features container Ends -->
@@ -161,25 +116,11 @@
 						</div>
 						<!-- Features Controls Ends -->
 				</div>
-			</div>
-		</div>
+			</div>  
+	</section>
+	<!--=== Features section Ends ===-->
 
 
 
 
-<!--==== Slider and Card style plugin ====-->
-<script type="text/javascript" src="resources/js/jquery.baraja.js"></script>
-<script type="text/javascript" src="resources/js/jquery.vegas.min.js"></script>
-<script type="text/javascript" src="resources/js/jquery.bxslider.min.js"></script>
 
-<!--==== MailChimp Widget plugin ====-->
-<script type="text/javascript" src="resources/js/jquery.ajaxchimp.min.js"></script>
-
-<!--==== Scroll and navigation plugins ====-->
-<script type="text/javascript" src="resources/js/jquery.nicescroll.min.js"></script>
-<script type="text/javascript" src="resources/js/jquery.nav.js"></script>
-<script type="text/javascript" src="resources/js/jquery.appear.js"></script>
-<script type="text/javascript" src="resources/js/jquery.fitvids.js"></script>
-
-<!--==== Custom Script files ====-->
-<script type="text/javascript" src="resources/js/custom.js"></script>
