--- a/primid/src/main/webapp/src/modules/Viajero/Viajero.tpl.html
+++ b/primid/src/main/webapp/src/modules/Viajero/Viajero.tpl.html
@@ -2,19 +2,20 @@
 		<div class="container contact animated" data-animation="flipInY" data-animation-delay="1000">
 			<div class="row">
 				<div class="col-md-6  col-md-offset-6">
-					<div class="col-md-10 col-md-offset-1 center section-title">
+
+                                        <div class="col-md-10 col-md-offset-1 center section-title">
 					<div class="col-md-0 step-img">
 						<img src="resources/images/profile.jpg" class="img-circle profile">
 						</div>
-						<h4>Pepito Perez</h4>
+						<h4>Pepito Perez {{record.name}}</h4>
 					</div>
 
 					<form class="contact-form support-form center">
 
 						<div class="col-lg-12">
-							<label><input id="name" class="input-field form-item field-name" type="text" required="required" name="contact-name" placeholder="Pepito Perez" /></label>
-							<label><input id="email" class="input-field form-item field-email" type="email" required="required" name="contact-email" placeholder="TuCorreo@uniandes.edu.co" /></label>
-							
+							<label><input id="name" class="input-field form-item field-name" type="text" required="required" name="contact-name" placeholder="Pepito Perez" /> {{record.name}}</label>
+							<label><input id="email" class="input-field form-item field-email" type="email" required="required" name="contact-email" placeholder="TuCorreo@uniandes.edu.co" /> {{record.email}}</label>
+
 						</div>
 						<button type="submit" class="fancy-button button-line button-orange subform center">
 							Editar cuenta
@@ -29,7 +30,7 @@
 							</span>
 						</button>
 					</form>
-					
+
 			</div>
 
 		</div>
